--- a/style.css
+++ b/style.css
@@ -164,7 +164,7 @@ body {
 
 .services {
   text-align: center;
-  padding: 10rem 20dvw 15rem 20dvw;
+  padding: 5rem 20dvw 15rem 20dvw;
   display: flex;
   flex-direction: column;
   align-items: flex-start;
@@ -408,7 +408,6 @@ body {
   font-size: min(5rem, 20dvw);
   font-weight: 400;
   margin-bottom: 1rem;
-  text-align: center;
   text-align: left;
   width: min(500px, 80dvw);
 }
@@ -448,28 +447,6 @@ body {
   margin-left: 3rem;
 }
 
-@media (max-width: 768px) {
-  .team-section-one {
-    width: 80dvw;
-  }
-
-  .team-section-card {
-    padding: 3rem;
-  }
-
-  .team-section-member {
-    justify-content: center;
-  }
-
-  .team-section-card-text {
-    font-size: 1.25rem;
-  }
-
-  .three-dots-img {
-    margin-left: 0;
-  }
-}
-
 /* TEAM SECTION 2 */
 
 .team-section-two {
@@ -502,6 +479,20 @@ body {
   font-family: var(--bodyFont);
 }
 
+.team-member {
+  background-color: var(--bgLight);
+}
+
+.team-member-img {
+  transition: all 0.25s ease;
+  &:hover {
+    translate: 0 -10px;
+    cursor: pointer;
+    transition: all 0.25s ease;
+    box-shadow: 0 0 20px 5px rgba(0, 0, 0, 0.1);
+  }
+}
+
 .team-member-name {
   font-weight: 600;
   margin-top: 1rem;
@@ -522,5 +513,146 @@ body {
   justify-content: center;
   flex-wrap: wrap;
   gap: 5rem;
-  padding: 5rem 0;
+  padding: 5rem 10dvw;
+  height: 80dvh;
+}
+
+.partners-section-heading {
+  font-family: var(--headingFont);
+  font-size: min(5.5rem, 20dvw);
+  font-weight: 400;
+  margin-bottom: 1rem;
+  text-align: left;
+  width: min(500px, 80dvw);
+  letter-spacing: 0.2rem;
+}
+
+.partners-grid {
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  grid-template-rows: auto;
+  gap: 1px;
+  background-color: #8d8d8d1a;
+  border: 1px solid #8d8d8d1a;
+}
+
+.partners-img {
+  transition: all 0.25s ease;
+  &:hover {
+    translate: -5px -10px;
+    transition: all 0.25s ease;
+  }
+}
+
+/* CONTACT SECTION */
+
+.contact-section {
+  padding: 5rem 15dvw 2rem 15dvw;
+  background: url(./images/background/contact-background.png);
+  background-repeat: no-repeat;
+  background-size: contain;
+  background-blend-mode: luminosity;
+  background-position: bottom;
+  background-color: var(--bgGray);
+  background-position-y: 10rem;
+}
+
+.contact-section-heading {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  flex-wrap: wrap;
+}
+
+.contact-heading-text {
+  font-family: var(--headingFont);
+  font-size: min(3rem, 10dvw);
+  font-weight: 400;
+  margin-bottom: 1rem;
+  text-align: left;
+}
+
+.contact-socials-img {
+  height: 1.25rem;
+  width: 1.25rem;
+}
+
+.contact-section-main {
+  font-family: var(--bodyFont);
+  font-size: min(5rem, 15dvw);
+  color: var(--textGray);
+}
+
+.contact-getintouch {
+  font-family: var(--bodyFont);
+  margin-top: 2rem;
+  font-size: 1.1rem;
+  font-weight: 600;
+  width: fit-content;
+  padding-bottom: 0.25rem;
+  border-bottom: 1px solid var(--bgCard);
+  margin-bottom: 7.5rem;
+}
+
+.copyright-info {
+  font-family: var(--bodyFont);
+  font-size: 0.9rem;
+  color: var(--textLight);
+  text-align: center;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  flex-wrap: wrap;
+}
+
+.developer-name {
+  text-decoration: underline;
+}
+
+@media (max-width: 1600px) {
+  .partners {
+    padding: 10rem 2rem;
+    height: auto;
+  }
+}
+
+@media (max-width: 768px) {
+  .team-section-one {
+    width: 80dvw;
+  }
+
+  .team-section-card {
+    padding: 3rem;
+  }
+
+  .team-section-member {
+    justify-content: center;
+  }
+
+  .team-section-card-text {
+    font-size: 1.25rem;
+  }
+
+  .three-dots-img {
+    margin-left: 0;
+  }
+
+  .partners-grid {
+    grid-template-columns: repeat(1, 1fr);
+    background-color: var(--bgLight);
+    border: none;
+    gap: 1rem;
+  }
+
+  .partners-img {
+    border: 1px solid #8d8d8d1a;
+  }
+
+  .contact-section {
+    background-size: cover;
+  }
+
+  .contact-section-main {
+    margin-top: 5rem;
+  }
 }
