--- a/style.css
+++ b/style.css
@@ -103,6 +103,21 @@ body {
   }
 }
 
+.grid-popup {
+  animation: grid-popup 1s ease;
+}
+
+@keyframes grid-popup {
+  from {
+    opacity: 0;
+    scale: 0.75;
+  }
+  to {
+    opacity: 1;
+    scale: 1;
+  }
+}
+
 /* SECTION WISE CSS */
 
 /* HOME SECTION */
